Deploy VesuVault to Sepolia testnet
- VesuVault class hash: 0x7d8f42d881f39cf28f4966535851d8c9ce0e4f1803505f1474364a2d120bcd6
- VesuVault address: 0x04997bb4f992a6c9918030b34947fcc2bc73ce0068e9077a6b07c0abce40baaf
- Transaction: 0x07a208740a1db873afeb81dadd7f95732806d3df7b285880e5d0195b779f25b3

Note: Contract deployed with placeholder addresses (0x0)
Need: WBTC, USDC, VesuPool, Verifier addresses for full integration

--- a/contracts/snfoundry.toml
+++ b/contracts/snfoundry.toml
@@ -1,4 +1,4 @@
 [sncast.sepolia]
 url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
 account = "vestazk"
-accounts_file = "~/.starknet_accounts/starknet_open_zeppelin_accounts.json"
+accounts_file = "/Users/anubhavsingh/.starknet_accounts/starknet_open_zeppelin_accounts.json"
