--- a/package.json
+++ b/package.json
@@ -3,24 +3,11 @@
   "version": "0.1.0",
   "description": "Privacy-preserving lending vault on Starknet - prevents liquidation hunting via ZK proofs",
   "type": "module",
-  "main": "index.js",
   "scripts": {
-    "build": "tsc",
-    "build:web": "vite build",
-    "dev": "bun run src/demo.ts",
-    "dev:web": "vite",
-    "api": "bun run api/server.ts",
-    "serve": "bunx http-server . -p 8080",
-    "demo": "bun run build && bun run dist/demo.js",
-    "tongo:init": "bun run scripts/tongo-init.ts",
-    "preflight:tx": "bun run src/tx-preflight.ts",
-    "garaga:smoke": "bun run scripts/garaga-smoke.ts",
-    "garaga:verify": "bun run scripts/garaga-verify.ts",
-    "check:health": "bun run scripts/health-check.ts",
-    "template:quickstart": "bun run template/quickstart.ts",
-    "check": "bun run type-check",
-    "preview": "vite preview",
-    "type-check": "tsc --noEmit"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
@@ -40,15 +27,22 @@
   "license": "MIT",
   "dependencies": {
     "@fatsolutions/tongo-sdk": "^1.3.1",
-    "circomlibjs": "^0.1.7",
-    "dotenv": "^17.2.3",
+    "@starknet-react/core": "^2.2.0",
     "get-starknet": "^3.3.3",
     "get-starknet-core": "^3.3.5",
-    "starknet": "^8.9.1"
+    "next": "^14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "starknet": "^6.0.0",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "typescript": "^5.9.3",
-    "vite": "^7.2.4"
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0"
   }
 }
