feat: Deploy mock Vesu pool for testing
- Add MockVesuPool contract (simulates Vesu lending protocol)
- Deploy MockVesuPool: 0x01f828767b...
- Redeploy VesuVault with new Vesu pool: 0x024644fe6...
- Update frontend config with new contract addresses

--- a/contracts/snfoundry.toml
+++ b/contracts/snfoundry.toml
@@ -1,4 +1,4 @@
 [sncast.sepolia]
-url = "https://starknet-sepolia.public.blastapi.io/rpc/v0_7"
+url = "https://starknet-sepolia.g.alchemy.com/starknet/version/rpc/v0_10/cf52O0RwFy1mEB0uoYsel"
 account = "vestazk"
 accounts_file = "/Users/anubhavsingh/.starknet_accounts/starknet_open_zeppelin_accounts.json"
