--- a/package.json
+++ b/package.json
@@ -27,13 +27,15 @@
   "license": "MIT",
   "dependencies": {
     "@fatsolutions/tongo-sdk": "^1.3.1",
-    "@starknet-react/core": "^2.2.0",
+    "@noir-lang/backend_barretenberg": "^0.36.0",
+    "@noir-lang/noir_js": "^1.0.0-beta.19",
+    "@starknet-react/core": "^2.9.0",
     "get-starknet": "^3.3.3",
     "get-starknet-core": "^3.3.5",
     "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "starknet": "^6.0.0",
+    "starknet": "^6.24.1",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
